# weezqlite_webapp

./: CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml
client/: .gitignore  README.md  app.js  config.example.js  config.js  index.html  package-lock.json  package.json  playwright.config.js  vitest.config.js
client/tests/: azure.test.js  db.test.js  persistence.test.js  router.test.js  setup.js  views.test.js
client/tests/e2e/: app.spec.js
docs/: AZURE_BACKUPS_PLAN.md  CLIENT_SIDE_PLAN.md  PLAN.md  STACK.md
src/weezqlite/: database.py  main.py
src/weezqlite/routes/: home.py  query.py  tables.py
src/weezqlite/templates/: base.html  index.html  query.html  table.html  tables.html
tests/: conftest.py  test_database.py  test_routes_home.py  test_routes_query.py  test_routes_tables.py
