[project]
name = "weezqlite"
version = "0.1.0"
description = "A simple sqlite3 database viewer web application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "structlog>=24.0",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
]

[project.scripts]
weezqlite = "weezqlite.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weezqlite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]
